--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lodash": "^4.17.15",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "react-toastify": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
